--- a/index.html
+++ b/index.html
@@ -107,7 +107,12 @@
                     <div class="col-md-6 col-md-offset-3">
                         <h2>About</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
-                        <p>Hello! I'm Lanem, a full stuck developer, a Python enthusiast, and a guy slighty obsessed for code quality. I’m currently available for freelance work. If you have a project that you want to get started or think you need my help with something, then get in touch.</p>
+                        <p>
+                    Software engineer at Kimetrica’s Data Engineering and Acquisition Team, which focuses on developing highly-curated data sources, tools and technologies that help ingest datasets from various sources and standardize them for usage across different projects. Lanem is in charge of developing extract, transform and load (ETL) pipelines using a combination of open source technologies including the Luigi workflow engine and Pandas for data manipulation. 
+                    
+                    He also supports the Applied science team on researching new data sources, data cleaning, and warehousing. Write unit tests for new software features. Developing, feature improvement and maintenance of Kimetrica Data Warehouse’s data explorer, data APIs and warehouse documentation using technologies such as sphinx. Writing scrapers and crawlers to fetch web based open source datasets. 
+                    
+                    I’m currently available for freelance work. If you have a project that you want to get started or think you need my help with something, then get in touch.</p>
                         <a href="" class="btn btn-fill" target="_blank" download>Download my cv</a>
                     </div>
                 </div>
@@ -208,7 +213,7 @@
                 <div class="row">
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-1.jpg" class="img-res" alt="">
+                            <img src="assets/img/Portfolio-1.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Project Title</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -218,7 +223,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-2.jpg" class="img-res" alt="">
+                            <img src="assets/img/Portfolio-2.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Project Title</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem2"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -228,7 +233,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-3.jpg" class="img-res" alt="">
+                            <img src="assets/img/Portfolio-3.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Project Title</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -238,7 +243,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-4.jpg" class="img-res" alt="">
+                            <img src="assets/img/Portfolio-4.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Project Title</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem4"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -248,7 +253,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-5.jpg" class="img-res" alt="">
+                            <img src="assets/img/Portfolio-5.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Project Title</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem5"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -258,7 +263,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-6.jpg" class="img-res" alt="">
+                            <img src="assets/img/Portfolio-6.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Project Title</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem6"><span class="glyphicon glyphicon-eye-open"></span></a>
