--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
             
                 <div class="col-md-6 text-right">
-                    <img src="assets/img/Ane Ascension.jpg" alt="alex-vidal">
+                    <img src="assets/img/passport.jpg" alt="alex-vidal">
                 </div>
 
             </div>
