--- a/index.html
+++ b/index.html
@@ -108,14 +108,9 @@
                         <h2>About</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                         <p>
-                    Software engineer at Kimetrica’s Data Engineering and Acquisition Team, which focuses on developing varsatile tools and technologiesfor usage across different projects. Lanem is in charge of developing Extract, Transform and Load (ETL) pipelines using a combination of open source technologies including the Luigi workflow engine and Pandas for data manipulation. 
-                    
-                    He also develops new features for Kimetrica Data Warehouse’s data explorer, Create data APIs and warehouse documentation using technologies such as sphinx.
-
-                    Writing scrapers and crawlers to fetch web based open source datasets. 
-                    
-                    I’m currently available for freelance work. If you have a project that you want to get started or think you need my help with something, then get in touch.</p>
-                        <a href="" class="btn btn-fill" target="_blank" download>Download my cv</a>
+                    Since beginning my journey as a sofware developer nearly 7years ago, I've done remote work for agencies, consulted for startups, and collaborated with talented people to create digital products for both business and consumer use. I'm quietly confident, naturally curious, and perpetually working on improving my chops one design problem at a time.
+                      </p>
+                        <a href="https://download1081.mediafire.com/l4xqo8b2towg/76at1nrbisuluzt/Lanem_Jafftich_cv.pdf" class="btn btn-fill" target="_blank" download>Download my cv</a>
                     </div>
                 </div>
             </div>
